@@ -1,3 +1,11 @@
+// create a runnable jar with jar dependencies stored in lib subdirectory
+tasks.whenTaskAdded { task ->
+    ['startScripts', 'distTar'].each { String skipTaskName ->
+        if (task.name.contains(skipTaskName)) {
+            task.enabled = false
+        }
+    }
+}
 apply plugin: 'java'
 apply plugin: 'application'
 
@@ -19,22 +27,13 @@ dependencies {
     compile 'commons-dbcp:commons-dbcp:1.4'
     compile 'commons-net:commons-net:3.6'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.apache.httpcomponents:httpclient:4.5.6'
-    compile 'org.springframework:spring-beans:5.0.9.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.0.9.RELEASE'
+    compile 'org.apache.httpcomponents:httpclient:4.5.7'
+    compile 'org.springframework:spring-beans:5.1.0.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.1.0.RELEASE'
     compile 'com.oracle:ojdbc6:11.2.0.4.0-atlassian-hosted'
     compile 'com.io7m.xom:xom:1.2.10'
 
     compile fileTree(dir: 'lib', include: '*.jar')
-}
-
-// overrides below are needed only for jenkins in RGD
-// otherwise the names of build scripts and distros will default to the jenkins job name, f.e. 'dev_CTDDisease'
-//   overrides below will guarantee than on both DEV and other job groups, the generated dfiles/directories are the same
-//   as the project name
-
-startScripts {
-    applicationName = myAppName
 }
 
 jar {
@@ -43,7 +42,9 @@ jar {
         attributes(
             'Built-By': System.getProperty('user.name'),
             'Built-Date': new Date(),
-            'Built-JDK': System.getProperty('java.version')
+            'Built-JDK': System.getProperty('java.version'),
+            'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+            'Main-Class': mainClassName
         )
     }
 }
@@ -53,3 +54,12 @@ distributions {
         baseName = myAppName
     }
 }
+
+task createDistro(type: Copy) {
+    def zipFile = file('build/distributions/'+myAppName+'.zip')
+    def outputDir = file("build/install")
+
+    from zipTree(zipFile)
+    into outputDir
+}
+createDistro.dependsOn assembleDist
