@@ -4,21 +4,17 @@ import edu.mcw.rgd.datamodel.MiRnaTarget;
 import edu.mcw.rgd.pipelines.PipelineRecord;
 import edu.mcw.rgd.pipelines.RecordProcessor;
 import edu.mcw.rgd.process.Utils;
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
+import org.apache.log4j.Logger;
 
 /**
- * Created by IntelliJ IDEA.
- * User: mtutaj
- * Date: 5/4/15
- * Time: 12:13 PM
- * <p>
+ * @author mtutaj
+ * @since 5/4/15
  * actual qc of a single record identified by a unique MI (mirbase) id:
  * all information from database is already loaded in
  */
 public class miRnaQC extends RecordProcessor {
 
-    Log log = LogFactory.getLog("core");
+    Logger log = Logger.getLogger("core");
 
     @Override
     public void process(PipelineRecord pipelineRecord) throws Exception {
